--- a/src/app/task/overview/overview.component.html
+++ b/src/app/task/overview/overview.component.html
@@ -1,3 +1,4 @@
+<h1>Gave takenlijst</h1>
 <app-task *ngFor="let task of tasks" [task]="task" (refreshEvent)="refresh($event)" ></app-task>
 <p *ngIf="tasks === null || tasks.length === 0">
   Er zijn nog geen taken, voeg ze hieronder toe.
