Translated to english and added a bit more of a description.

--- a/src/app/task/new/new.component.html
+++ b/src/app/task/new/new.component.html
@@ -1,4 +1,4 @@
 
 <div>
-  <p>Taak: <input type="text" [(ngModel)]="description"/><button (click)="save()">Toevoegen</button></p>
+  <p>Task: <input type="text" [(ngModel)]="description"/><button (click)="save()">Add</button></p>
 </div>
