--- a/src/app/task/overview/overview.component.html
+++ b/src/app/task/overview/overview.component.html
@@ -1,6 +1,6 @@
 <h1>Coole taken</h1>
 <app-task *ngFor="let task of tasks" [task]="task" (refreshEvent)="refresh($event)" ></app-task>
 <p *ngIf="tasks === null || tasks.length === 0">
-  Er zijn nog geen taken, voeg ze hieronder toe.
+  No tasks have been added, please do so below.
 </p>
 <app-new (addEvent)="addTask($event)"></app-new>
