--- a/src/app/task/task/task.component.html
+++ b/src/app/task/task/task.component.html
@@ -1,3 +1,3 @@
 <div>
-  <p><input type="checkbox" [ngModel]="task.done" (click)="updateTask()" /> {{task?.description}}  <a (click)="removeTask(task)">Verwijderen</a> </p>
+  <p><input type="checkbox" [ngModel]="task.done" (click)="updateTask()" /> {{task?.description}}  <a (click)="removeTask(task)">Delete</a> </p>
 </div>
