--- a/src/app/task/overview/overview.component.html
+++ b/src/app/task/overview/overview.component.html
@@ -1,4 +1,4 @@
-<h1>Coole taken</h1>
+<h1>Cool tasklist</h1>
 <app-task *ngFor="let task of tasks" [task]="task" (refreshEvent)="refresh($event)" ></app-task>
 <p *ngIf="tasks === null || tasks.length === 0">
   No tasks have been added, please do so below.
